option go_package = "./protopb";

message Top10 {
  repeated string names = 1;
  repeated string profilePaths = 2;
  repeated int64 countMovies = 3;
  required string clientId = 4;
  required int64 messageId = 5;
  optional string sourceId = 6;
  optional bool eof = 7;
}